- fix bug with nav element width overlapping - add active style/class for nav links - add listeners for navigation bar link click event - remove title div

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,6 @@ body
 
 nav
 {
-    width: 100%;
     height: 100%;
     display: flex;
     position: fixed;
@@ -71,6 +70,11 @@ section
     text-decoration: none;
     text-transform: uppercase;
     color: var(--text-color-important);
+}
+
+.nav-link.active
+{
+    font-weight: bold;
 }
 
 .centered
